# flowd

./: .gitignore  Cargo.toml  LICENSE  README.md  flowd.toml
.example-global.flowd/rules/karpathy/: surgical-changes.yaml  think-before-coding.yaml
.flowd/rules/: cargo-discipline.yaml  commit-message-discipline.yaml  crate-boundaries.yaml  crate-version-bumps.yaml  hook-error-swallowing.yaml  mcp-wire-discipline.yaml  schema-migrations.yaml
.flowd/rules/karpathy/: goal-driven.yaml  simplicity-first.yaml
crates/flowd-cli/: Cargo.toml
crates/flowd-cli/src/: cli.rs  config.rs  daemon.rs  integration.rs  main.rs  output.rs  paths.rs  plan_compiler.rs  spawner.rs
crates/flowd-cli/src/commands/: export.rs  history.rs  hook.rs  init.rs  mcp.rs  mod.rs  observe.rs  plan.rs  rules.rs  search.rs  start.rs  status.rs  stop.rs
crates/flowd-core/: Cargo.toml
crates/flowd-core/src/: error.rs  lib.rs  memory.rs  orchestration.rs  rules.rs  types.rs
crates/flowd-core/src/memory/: compactor.rs  context.rs  service.rs  tier.rs
crates/flowd-core/src/orchestration/: clarification.rs  compiler.rs  executor.rs  gate.rs  integration.rs  layer_runner.rs  loader.rs  observer.rs  plan_events.rs  store.rs  template.rs
crates/flowd-core/src/rules/: evaluator.rs  loader.rs
crates/flowd-core/tests/: orchestration.rs  rules_engine.rs
crates/flowd-mcp/: Cargo.toml
crates/flowd-mcp/src/: compiler.rs  handlers.rs  integration.rs  lib.rs  observer.rs  protocol.rs  server.rs  summarizer.rs  tools.rs
crates/flowd-mcp/src/llm/: claude_cli.rs  mod.rs  openai.rs
crates/flowd-mcp/tests/: e2e.rs  integration.rs  llm_e2e.rs  plan_integrate.rs  prose_first.rs  prose_first_stub.rs  workspace_root.rs
crates/flowd-onnx/: Cargo.toml
crates/flowd-onnx/src/: lib.rs  provider.rs
crates/flowd-storage/: Cargo.toml
crates/flowd-storage/src/: lib.rs  migrations.rs  plan_event_store.rs  plan_store.rs  sqlite.rs  step_branch_store.rs
crates/flowd-storage/tests/: compactor_orphan_session.rs  keyword_search_grammar.rs
crates/flowd-vector/: Cargo.toml
crates/flowd-vector/src/: lib.rs  qdrant.rs
integrations/: README.md
integrations/claude-code/: settings.json
integrations/claude-code/hooks/: _lib.sh  post-tool-use.sh  session-end.sh  session-start.sh
integrations/cursor/: mcp.json
