[workspace]
resolver = "2"
members = [
    "crates/flowd-cli",
    "crates/flowd-core",
    "crates/flowd-mcp",
    "crates/flowd-onnx",
    "crates/flowd-storage",
    "crates/flowd-vector",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/kaynetik/flowd"

[workspace.dependencies]
# Internal crates
flowd-core = { path = "crates/flowd-core" }
flowd-storage = { path = "crates/flowd-storage" }
flowd-vector = { path = "crates/flowd-vector" }
flowd-onnx = { path = "crates/flowd-onnx" }
flowd-mcp = { path = "crates/flowd-mcp" }

# Async runtime
tokio = { version = "1", features = ["full"] }
rayon = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Storage
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
qdrant-client = "1"

# Embeddings
ort = "2.0.0-rc.12"
ndarray = "0.17"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
regex = "1"
tempfile = "3"

# HTTP (used by flowd-mcp::OpenAiCompatibleCallback to talk to mlx_lm.server
# and any other OpenAI-compatible endpoint). reqwest is already pulled in
# transitively by qdrant-client; declaring it explicitly keeps version drift
# under workspace control.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Mock HTTP server for integration tests against OpenAI-compatible endpoints.
wiremock = "0.6"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
