[package]
name = "flowd-mcp"
version = "0.1.0"
description = "MCP server exposing flowd tools to Claude Code and Cursor"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
flowd-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
flowd-storage = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
