[package]
name = "flowd-mcp"
version = "0.1.0"
description = "MCP server exposing flowd tools to Claude Code and Cursor"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
flowd-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
# Used to timestamp DecisionRecord auto-fills produced by the
# LlmPlanCompiler -- the wire shape from the model doesn't carry one.
chrono = { workspace = true }
# OpenAI-compatible HTTP callback for the LlmPlanCompiler. Using rustls
# rather than native-tls keeps the build hermetic (no system OpenSSL
# requirement) and matches what qdrant-client already pulls in.
reqwest = { workspace = true }

[dev-dependencies]
flowd-storage = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
