[package]
name = "flowd-mcp"
version = "0.3.1"
description = "MCP server exposing flowd tools to Claude Code and Cursor"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
flowd-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
# Used to timestamp DecisionRecord auto-fills produced by the
# LlmPlanCompiler -- the wire shape from the model doesn't carry one.
chrono = { workspace = true }
# OpenAI-compatible HTTP callback for the LlmPlanCompiler. Workspace
# pinning selects rustls-tls (no system OpenSSL requirement) and
# matches the rustls stack qdrant-client already pulls in transitively,
# so the final binary links a single TLS implementation.
reqwest = { workspace = true }

[dev-dependencies]
flowd-storage = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }

# Used only by the Unix-gated timeout_kills_child_process test to
# probe post-kill process state via kill(pid, 0). Kept in
# target-specific dev-deps so Windows builds don't pull it in.
[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"

[lints]
workspace = true
