[package]
name = "flowd-onnx"
version = "0.1.0"
description = "ONNX Runtime embedding provider for flowd"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
flowd-core = { workspace = true }
ort = { workspace = true }
ndarray = { workspace = true }
tokenizers = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
