[package]
name = "flowd-storage"
version = "0.1.0"
description = "SQLite + FTS5 storage backend for flowd"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
flowd-core = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
